bug-fixed: z-index #tiledesk-container increased bug-fixed: errorLabel not translated if translate key is passed

--- a/src/iframe-style.css
+++ b/src/iframe-style.css
@@ -5,7 +5,7 @@
     width: auto;   
     height: auto;
     display: none;
-    z-index: 999999;
+    z-index: 2000000000; /*999999*/;
 }
 #tiledeskdiv {
     /* width: 100%;
